--- a/Style.css
+++ b/Style.css
@@ -1,13 +1,35 @@
-.body{}
+body{
+    background-color: rgba(245, 172, 172, 0.637);
+}
 header{
-    
-    width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 650px;
     height: 50px;
-    margin-right: 30px;
     background-color: rgb(207, 232, 220);
     border: 2px solid rgb(79, 185, 227);
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
+    border-radius: 30px;
+    padding-bottom: 30px;
     
+}
+#left_panel{
+    margin-bottom: 10px;
+    padding: 10px;
+    list-style-type: none;
+    width: 140px;
+    text-align: left;
+}
+#left_panel a{
+    color: #000000;
+    padding: 5px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    width: 100px;
+}
+#left_panel a:hover{
+    border-radius: 20px 5px;
+    background-color: #0066ff41;
 }
